test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/convert_ulong_to_void_ptr.plx
pub fn main(none) i32 {
    x: u64 = 0
    v: *any = x #  can't implicitly convert a non-pointer type to a pointer
}
